# axelar-relayer-core

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  clippy.toml  config-example.toml  config.example.toml  deny.toml  docker-compose.gcp.yaml  docker-compose.nats.yaml  flake.nix  relayer-config-example.toml  rust-toolchain.toml
.github/actions/setup-repo/: action.yaml
.github/workflows/: check.yaml  conventional-pr.yaml  deny.yaml  docker-build-check.yml  test.yaml  unused-deps.yaml
crates/amplifier-api/: Cargo.toml  README.md
crates/amplifier-api/examples/: healthcheck.rs
crates/amplifier-api/fixtures/: example_cert.pem
crates/amplifier-api/src/: big_int.rs  bigint.rs  client.rs  config.rs  error.rs  lib.rs  types.rs  util.rs
crates/amplifier-api/src/client/: requests.rs
crates/amplifier-components/: Cargo.toml
crates/amplifier-components/examples/: components_array.rs
crates/amplifier-components/src/: lib.rs  nats.rs
crates/amplifier-ingester/: Cargo.toml  Dockerfile  README.md
crates/amplifier-ingester/src/: components.rs  config.rs  lib.rs  main.rs
crates/amplifier-ingester/src/components/: gcp.rs  nats.rs
crates/amplifier-subscriber/: Cargo.toml  Dockerfile  README.md
crates/amplifier-subscriber/src/: config.rs  lib.rs  main.rs
crates/amplifier-subscriber/src/components/: gcp.rs  nats.rs
crates/bin-util/: Cargo.toml  README.md
crates/bin-util/src/: config_defaults.rs  health_check.rs  lib.rs  nats.rs  telemetry.rs
crates/common/: Cargo.toml
crates/common-serde-utils/: Cargo.toml
crates/common-serde-utils/src/: lib.rs
crates/common/src/: lib.rs
crates/effective-tx-sender/: Cargo.toml
crates/effective-tx-sender/src/: lib.rs
crates/file-based-storage/: Cargo.toml
crates/file-based-storage/src/: lib.rs
crates/health-check/: Cargo.toml
crates/health-check/src/: lib.rs
crates/infrastructure/: Cargo.toml  README.md
crates/infrastructure/src/: gcp.rs  interfaces.rs  lib.rs  nats.rs  tracking.rs
crates/infrastructure/src/gcp/: connectors.rs  consumer.rs  kv_store.rs  publisher.rs  util.rs
crates/infrastructure/src/nats/: connectors.rs  consumer.rs  kv_store.rs  publisher.rs
crates/relayer-amplifier-api-integration/: Cargo.toml
crates/relayer-amplifier-api-integration/src/: component.rs  config.rs  from_amplifier.rs  healthcheck.rs  lib.rs  listener.rs  subscriber.rs  to_amplifier.rs
crates/relayer-amplifier-state/: Cargo.toml
crates/relayer-amplifier-state/src/: lib.rs
crates/relayer-engine/: Cargo.toml
crates/relayer-engine/src/: config.rs  lib.rs
crates/retry/: Cargo.toml
crates/retry/src/: backoff_pair_iterator.rs  builder.rs  lib.rs  retry_fn.rs  retry_pair_fn.rs
crates/retrying-solana-http-sender/: Cargo.toml
crates/retrying-solana-http-sender/src/: lib.rs
crates/solana-axelar-relayer/: Cargo.toml  build.rs
crates/solana-axelar-relayer/src/: main.rs  telemetry.rs
crates/solana-event-forwarder/: Cargo.toml
crates/solana-event-forwarder/src/: component.rs  config.rs  lib.rs
crates/solana-gateway-task-processor/: Cargo.toml
crates/solana-gateway-task-processor/src/: component.rs  config.rs  lib.rs
crates/solana-listener/: Cargo.toml
crates/solana-listener/src/: component.rs  config.rs  lib.rs  retrying_http_sender.rs
crates/solana-listener/src/component/: log_processor.rs  signature_batch_scanner.rs  signature_realtime_scanner.rs
crates/storage-bus/: Cargo.toml
crates/storage-bus/src/: gcp.rs  interfaces.rs  lib.rs  nats.rs
crates/storage-bus/src/gcp/: connectors.rs  consumer.rs  error.rs  kv_store.rs  publisher.rs  util.rs
crates/storage-bus/src/nats/: connectors.rs  consumer.rs  error.rs  kv_store.rs  publisher.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs
doc/adr/: 0001-record-architecture-decisions.md  0002-configuration.md  0003-solana-event-fetching.md  0004-solana-tx-sending.md
docs/: relayer.mermaid
nix/: devshells.nix
telemetry/: otel-collector-config.yaml  prometheus.yaml  tempo.yaml
telemetry/grafana/provisioning/datasources/: prometheus.yaml  tempo.yaml
terraform/: .gitignore  README.md
terraform/environments/mainnet/: main.tf
terraform/environments/testnet/: main.tf
terraform/modules/iam/: main.tf  outputs.tf
terraform/modules/k8s/: main.tf  variables.tf
terraform/modules/kms/: main.tf  outputs.tf  variables.tf
terraform/modules/memorystore/: main.tf  outputs.tf  variables.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
xtask/: Cargo.toml
xtask/src/: main.rs
