cargo-features = ["codegen-backend"]

[workspace.package]
version = "0.1.0"
authors = []
repository = "https://github.com/eigerco/solana-axelar-relayer-internal"
homepage = "https://github.com/eigerco/solana-axelar-relayer-internal"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
perf = { priority = -3, level = "deny" }
correctness = { priority = -4, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
pedantic = { priority = -8, level = "deny" }
nursery = { priority = -9, level = "deny" }

cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
negative_feature_names = "allow"
std_instead_of_alloc = "allow"
expect_used = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
self_named_module_files = "allow"
shadow_unrelated = "allow"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "deny", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }

[workspace.dependencies]
# Our crates
relayer-engine = { path = "crates/relayer-engine" }
relayer-amplifier-api-integration = { path = "crates/relayer-amplifier-api-integration" }
relayer-amplifier-state = { path = "crates/relayer-amplifier-state" }
file-based-storage = { path = "crates/file-based-storage" }
amplifier-api = { path = "crates/amplifier-api" }
solana-listener = { path = "crates/solana-listener" }
common-serde-utils = { path = "crates/common-serde-utils" }
solana-event-forwarder = { path = "crates/solana-event-forwarder" }
solana-tx-pusher = { path = "crates/solana-tx-pusher" }
retrying-solana-http-sender = { path = "crates/retrying-solana-http-sender" }
solana-gateway-task-processor = { path = "crates/solana-gateway-task-processor" }
effective-tx-sender = { path = "crates/effective-tx-sender" }

# Solana Gateway
gmp-gateway = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
axelar-rkyv-encoding = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }

# CLI
clap = { version = "4", features = ["derive"] }
xshell = "0.2"

# Utils
arrayvec = "0.7"
url = { version = "2.5", features = ["serde"] }
temp-env = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
base64 = "0.22"
bs58 = "0.5"
redact = { version = "0.1", features = ["serde"] }
thiserror = "1"
uuid = { version = "1.2", features = ["v4", "serde"] }
typed-builder = "0.18"
derive_builder = "0.20"
bnum = "0.12"
hex = "0.4"
quanta = "0.12"
backoff = { version = "0.4", features = ["tokio"] }
indoc = "2"
itertools = "0.12"
num-traits = "0.2"
memmap2 = "0.9"
bytemuck = "1.19"

# Serde
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
simd-json = "0.13"

# Tests
rstest = { version = "0.21" }
test-log = { version = "0.2", features = ["trace"], default-features = false }
pretty_assertions = "1"
mockall = "0.13"

# Errors
eyre = "0.6"
color-eyre = "0.6"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls", "stream", "http2"] }

# Solana
solana-client = "2"
solana-rpc-client = "2"
solana-rpc-client-api = "2"
solana-program = "2"
solana-sdk = "2"
solana-transaction-status = "2"

# Async
tokio = { version = "1", features = ["rt", "signal", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tokio-util = "0.7"
futures-concurrency = "7.4"
futures-util = "0.3"
futures = "0.3"
async-trait = "0"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log", "json", "valuable", "tracing"] }
tracing-error = "0.2"

# opentelemetry
opentelemetry = "0.25"
opentelemetry-otlp = { version = "0.25", default-features = false, features = ["trace", "tokio", "logs", "metrics", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.26", default-features = false, features = ["metrics"] }
opentelemetry-semantic-conventions = "0.25"
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.25" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# codegen-backend = "cranelift" (not supported on m1 mac)

[patch.crates-io]
# curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching it here to unpin zeroize, using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
