[package]
name = "amplifier-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
bigint-u64 = []
bigint-u128 = []

[dependencies]
infrastructure = { workspace = true, features = ["publisher-interfaces"] }

serde.workspace = true
reqwest.workspace = true
base64.workspace = true
tracing.workspace = true
redact.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
typed-builder.workspace = true
borsh.workspace = true
rustls.workspace = true
hex.workspace = true

bnum = "0.13"
simd-json = "0.15"
reqwest-tracing = "0.5.7"
reqwest-middleware = "0.4.2"

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[example]]
name = "healthcheck"
path = "examples/healthcheck.rs"
doc-scrape-examples = true
