[package]
name = "amplifier-ingester"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
relayer-amplifier-api-integration.workspace = true
supervisor = { workspace = true, optional = true }
tracing.workspace = true
eyre.workspace = true
infrastructure = { workspace = true, features = ["consumer-interfaces"] }
tokio.workspace = true
tokio-util.workspace = true
num_cpus.workspace = true
serde.workspace = true
clap.workspace = true
url.workspace = true
bin-util.workspace = true
futures.workspace = true

[features]
default = ["gcp"]
nats = [
  "infrastructure/nats",
]
gcp = [
  "infrastructure/gcp",
]
storage-interfaces = []
supervisor = ["dep:supervisor"]

[lints]
workspace = true
