[package]
name = "amplifier-subscriber"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amplifier-api.workspace = true
supervisor.workspace = true
tracing.workspace = true
eyre.workspace = true
infrastructure = { workspace = true, features = ["publisher-interfaces", "nats"] }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
clap.workspace = true
ctrlc.workspace = true
relayer-amplifier-api-integration.workspace = true
toml.workspace = true
url.workspace = true
bin-util.workspace = true

async-nats = { workspace = true, optional = true }
google-cloud-pubsub = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
google-cloud-googleapis = { workspace = true, optional = true, features = [
  "pubsub",
] }
tonic = { workspace = true, optional = true }
flume = { workspace = true, optional = true, features = ["async"] }
thiserror.workspace = true
futures.workspace = true
borsh = { workspace = true, optional = true }
color-eyre.workspace = true

[lints]
workspace = true

[features]
default = ["nats"]
nats = [
  "dep:async-nats",
  "dep:borsh",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
gcp = [
  "dep:google-cloud-pubsub",
  "dep:google-cloud-googleapis",
  "dep:redis",
  "dep:tonic",
  "dep:borsh",
  "dep:flume",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
consumer-interfaces = []
publisher-interfaces = []
storage-interfaces = []
