[package]
name = "amplifier-subscriber"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amplifier-api.workspace = true
supervisor.workspace = true
tracing.workspace = true
eyre.workspace = true
infrastructure = { workspace = true, features = ["publisher-interfaces"] }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
clap.workspace = true
ctrlc.workspace = true
relayer-amplifier-api-integration.workspace = true
toml.workspace = true
url.workspace = true
bin-util.workspace = true

[features]
default = ["gcp"]
nats = [
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
gcp = [
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
consumer-interfaces = []
publisher-interfaces = []
storage-interfaces = []

[lints]
workspace = true
