[package]
name = "amplifier-subscriber"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amplifier-api.workspace = true
supervisor = { workspace = true, optional = true }
infrastructure = { workspace = true, features = [
  "publisher-interfaces",
  "consumer-interfaces",
  "storage-interfaces",
] }
bin-util.workspace = true
relayer-amplifier-api-integration.workspace = true

tracing.workspace = true
eyre.workspace = true
tokio.workspace = true
tokio-util.workspace = true
num_cpus.workspace = true
serde.workspace = true
clap.workspace = true
url.workspace = true

[features]
default = ["gcp"]
nats = ["infrastructure/nats"]
gcp = ["infrastructure/gcp"]
consumer-interfaces = []
publisher-interfaces = []
storage-interfaces = []
supervisor = ["dep:supervisor"]

[lints]
workspace = true
