[package]
name = "bin-util"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ctrlc.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true
axum.workspace = true
eyre.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
futures.workspace = true

[lints]
workspace = true
