[package]
name = "effective-tx-sender"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
thiserror.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
itertools.workspace = true
futures.workspace = true
tracing.workspace = true

[lints]
workspace = true
