[package]
name = "file-based-storage"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
relayer-amplifier-state.workspace = true
amplifier-api.workspace = true
memmap2.workspace = true
tracing.workspace = true
bytemuck.workspace = true

[lints]
workspace = true
