[package]
name = "infrastructure"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
url.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, optional = true }
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
borsh = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
rustls = { workspace = true, features = ["std"], optional = true }
uuid.workspace = true
opentelemetry.workspace = true

async-nats = { version = "0.41", optional = true }
google-cloud-pubsub = { package = "gcloud-pubsub", version = "1.2", optional = true }
google-cloud-gax = { package = "gcloud-gax", version = "1.2", optional = true }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.1.0", optional = true }
google-cloud-kms = { package = "gcloud-kms", version = "1.2", optional = true }
redis = { version = "0.31", features = [
  "tokio-comp",
  "aio",
  "connection-manager",
], optional = true }
flume = { version = "0.11", optional = true, features = ["async"] }
webpki-roots = { version = "1", optional = true }
rustls-gcp-kms = { git = "https://github.com/eigerco/rustls-gcp-kms.git", optional = true, features = [
  "serde",
] }
tonic = { version = "0.13", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[lints]
workspace = true

[features]
nats = [
  "dep:async-nats",
  "dep:borsh",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
gcp = [
  "dep:google-cloud-pubsub",
  "dep:google-cloud-googleapis",
  "dep:google-cloud-kms",
  "dep:redis",
  "dep:tonic",
  "dep:hex",
  "dep:borsh",
  "dep:tokio-util",
  "dep:rustls",
  "dep:rustls-gcp-kms",
  "dep:webpki-roots",
  "dep:chrono",
  "dep:flume",
  "dep:tracing-opentelemetry",
  "dep:google-cloud-gax",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
consumer-interfaces = []
publisher-interfaces = []
storage-interfaces = ["dep:hex"]
