[package]
name = "relayer-amplifier-api-integration"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
amplifier-api.workspace = true
relayer-amplifier-state.workspace = true
relayer-engine.workspace = true
common-serde-utils.workspace = true

typed-builder.workspace = true
futures.workspace = true
tracing.workspace = true
futures-concurrency.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
serde.workspace = true
clap.workspace = true
base64.workspace = true

tokio-stream = { version = "0.1" }
quanta = "0.12"

[lints]
workspace = true
