[package]
name = "retry"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tracing.workspace = true
rand.workspace = true

[lints]
workspace = true
