[package]
name = "retry"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
tokio-retry = "0.3"

[lints]
workspace = true
