[package]
name = "retrying-solana-http-sender"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
backoff.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
typed-builder.workspace = true
url.workspace = true

[lints]
workspace = true
