[package]
name = "solana-axelar-relayer"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
relayer-engine.workspace = true
eyre.workspace = true
color-eyre.workspace = true
toml.workspace = true
tokio.workspace = true
serde.workspace = true
relayer-amplifier-api-integration.workspace = true
solana-listener.workspace = true
solana-event-forwarder.workspace = true
solana-gateway-task-processor.workspace = true
retrying-solana-http-sender.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-appender-tracing.workspace = true
file-based-storage.workspace = true

[dev-dependencies]
temp-env.workspace = true
amplifier-api.workspace = true
pretty_assertions.workspace = true
indoc.workspace = true

[lints]
workspace = true
