[package]
name = "solana-event-forwarder"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
relayer-amplifier-api-integration.workspace = true
solana-listener.workspace = true
relayer-engine.workspace = true
gmp-gateway.workspace = true
tracing.workspace = true
eyre.workspace = true
bs58.workspace = true
solana-sdk.workspace = true
axelar-message-primitives.workspace = true
axelar-rkyv-encoding.workspace = true

[dev-dependencies]
base64.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true

[lints]
workspace = true
