[package]
name = "solana-gateway-task-processor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
solana-sdk.workspace = true
typed-builder.workspace = true
solana-client.workspace = true
serde.workspace = true
gmp-gateway.workspace = true
axelar-rkyv-encoding.workspace = true
tracing.workspace = true
futures.workspace = true
common-serde-utils = { workspace = true, features = ["solana-sdk"] }
bs58.workspace = true
relayer-engine.workspace = true
tokio.workspace = true
amplifier-api.workspace = true
relayer-amplifier-api-integration.workspace = true
effective-tx-sender.workspace = true
axelar-executable.workspace = true
num-traits.workspace = true

[dev-dependencies]
serde_json.workspace = true
mockall.workspace = true
async-trait.workspace = true
solana-transaction-status.workspace = true

[lints]
workspace = true
