[package]
name = "solana-listener"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
typed-builder.workspace = true
futures.workspace = true
tracing.workspace = true
futures-concurrency.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
serde.workspace = true
relayer-engine.workspace = true
thiserror.workspace = true
backoff.workspace = true
async-trait.workspace = true
serde_json.workspace = true

gmp-gateway.workspace = true
common-serde-utils.workspace = true

solana-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

[lints]
workspace = true
