[package]
name = "solana-listener"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
typed-builder.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
serde.workspace = true
relayer-engine.workspace = true
chrono.workspace = true

gmp-gateway.workspace = true
common-serde-utils = { workspace = true, features = ["solana-sdk"] }

solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

[lints]
workspace = true
