[package]
name = "storage-bus"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-nats = { workspace = true, optional = true }
google-cloud-pubsub = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
google-cloud-googleapis = { workspace = true, optional = true, features = [
  "pubsub",
] }
serde_json = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
flume = { workspace = true, optional = true, features = ["async"] }
serde = { workspace = true, optional = true }
url.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, optional = true }
thiserror.workspace = true
futures.workspace = true
common.workspace = true
tracing.workspace = true
borsh = { workspace = true, optional = true }

uuid.workspace = true

[lints]
workspace = true

[features]
nats = [
  "dep:async-nats",
  "dep:borsh",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
gcp = [
  "dep:google-cloud-pubsub",
  "dep:google-cloud-googleapis",
  "dep:redis",
  "dep:serde_json",
  "dep:serde",
  "dep:tonic",
  "dep:borsh",
  "dep:tokio-util",
  "dep:flume",
  "consumer-interfaces",
  "publisher-interfaces",
  "storage-interfaces",
]
consumer-interfaces = []
publisher-interfaces = []
storage-interfaces = []
