[package]
name = "supervisor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
nix = { version = "0.30.1", features = ["fs"] }
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
